fixed text editor issue with doubling events

--- a/index.html
+++ b/index.html
@@ -199,6 +199,72 @@
                     </div>
                 </div>
 
+                <div class="cpf-container" ci-name="padding">
+                    <div class="cpf-container-label">
+                        Внутрішній відступ
+                    </div>
+                    <div class="cpf-inputs-holder w-full">
+                        <div class="cpf-input-block w-wide">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input id="panel_padding_range" type="range" step="0.1" min="0.1" max="10" ci-type="input">
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input id="panel_padding_input" ci-type="input"></input>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cpf-container" ci-name="marginBottom">
+                    <div class="cpf-container-label">
+                        Відступ нижньої грані абзацу
+                    </div>
+                    <div class="cpf-inputs-holder w-full">
+                        <div class="cpf-input-block w-wide">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input id="panel_margin_bottom_range" type="range" step="0.1" min="0.1" max="10" ci-type="input">
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input id="panel_margin_bottom_input" ci-type="input"></input>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cpf-container" ci-name="fontSize">
+                    <div class="cpf-container-label">
+                        Розмір шрифта
+                    </div>
+                    <div class="cpf-inputs-holder w-full">
+                        <div class="cpf-input-block w-wide">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input id="panel_font_size_range" type="range" step="0.1" min="1" max="30" ci-type="input">
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input id="panel_font_size_input" ci-type="input"></input>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="cpf-container" ci-name="textEditor">
                     <div class="cpf-container-label">
                         Текст
