--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
                         Ширина
                     </div>
                     <div class="cpf-inputs-holder w-full">
-                        <div class="cpf-input-block w-wide">
+                        <div class="cpf-input-block w-middle">
                             <div class="cpf-input-label">
+                                Зн. (%)
                             </div>
                             <div class="cpf-input-holder">
                                 <input id="panel_width_range" type="range" step="1" min="2" max="100" ci-type="input">
@@ -147,9 +148,18 @@
                         </div>
                         <div class="cpf-input-block w-narrow">
                             <div class="cpf-input-label">
+                                Зн. (ч.)
                             </div>
                             <div class="cpf-input-holder">
                                 <input id="panel_width_input" ci-type="input"></input>
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label t-align-center">
+                                Авто
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="checkbox" style="height: 24px; width: 24px;" id="panel_width_checkbox" ci-type="input"></input>
                             </div>
                         </div>
                     </div>
@@ -160,8 +170,9 @@
                         Висота
                     </div>
                     <div class="cpf-inputs-holder w-full">
-                        <div class="cpf-input-block w-wide">
+                        <div class="cpf-input-block w-middle">
                             <div class="cpf-input-label">
+                                Зн. (%)
                             </div>
                             <div class="cpf-input-holder">
                                 <input id="panel_height_range" type="range" step="1" min="2" max="100" ci-type="input">
@@ -169,9 +180,18 @@
                         </div>
                         <div class="cpf-input-block w-narrow">
                             <div class="cpf-input-label">
+                                Зн. (ч.)
                             </div>
                             <div class="cpf-input-holder">
                                 <input id="panel_height_input" ci-type="input"></input>
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label t-align-center">
+                                Авто
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="checkbox" style="height: 24px; width: 24px;" id="panel_height_checkbox" ci-type="input"></input>
                             </div>
                         </div>
                     </div>
