created placing, moving, editing slides algorythm

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
             </div>
         </div>
         <div class="side-bars-and-main-field-holder">
+            <!-- <div class="slides-panel-holder">
+                <div class="slides-panel-buttons">
+
+                </div>
+            </div> -->
             <div class="slides-panel">
 
             </div>
