movement calculating has been reworked

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                     ТЕКСТ
                 </div>
                 <div class="drag-and-drop-item" i-name="href" i-addinfo="" i-is-selectable="false" i-is-movable="true" i-type="element">
-                    HREF
+                    ПОСИЛ.
                 </div>
                 <div class="drag-and-drop-item" i-name="img" i-addinfo="" i-is-selectable="false" i-is-movable="true" i-type="element">
-                    IMG
+                    ЗОБР.
                 </div>
                 <div style="display: flex; flex-direction:row;">
                     <button id="debug_button_1" style="padding: 3px; margin-right: 10px;">
@@ -224,6 +224,21 @@
                             </div>
                             <div class="cpf-input-holder">
                                 <input type="checkbox" style="height: 24px; width: 24px;" id="panel_height_checkbox" ci-type="input"></input>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cpf-container" ci-name="href">
+                    <div class="cpf-container-label">
+                        Посилання
+                    </div>
+                    <div class="cpf-inputs-holder w-full">
+                        <div class="cpf-input-block w-full">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input id="panel_href_input" type="input" ci-type="input">
                             </div>
                         </div>
                     </div>
