before adding images features

--- a/index.html
+++ b/index.html
@@ -234,11 +234,18 @@
                         Посилання
                     </div>
                     <div class="cpf-inputs-holder w-full">
-                        <div class="cpf-input-block w-full">
+                        <div class="cpf-input-block w-wide">
                             <div class="cpf-input-label">
                             </div>
                             <div class="cpf-input-holder">
                                 <input id="panel_href_input" type="input" ci-type="input">
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <button id="panel_href_button" class="btn btn-primary">Тест</button>
                             </div>
                         </div>
                     </div>
