done with it, transfering to another repo

--- a/index.html
+++ b/index.html
@@ -58,11 +58,16 @@
                     </button>
                 </div>
                 <div class="slides-panel">
-
+                    
                 </div>
             </div>
             
             <div class="templates-panel-holder">
+                <div class="slides-panel-buttons">
+                    <button id="update_template_list" class="btn btn-primary slides-panel-button">
+                        Оновити
+                    </button>
+                </div>
                 <div class="templates-panel">
 
                 </div>
@@ -247,7 +252,7 @@
                             <div class="cpf-input-label">
                             </div>
                             <div class="cpf-input-holder">
-                                <select name="" id="panel_image_name_select">
+                                <select id="panel_image_name_select">
 
                                 </select>                                
                             </div>
